Change insert from subquery planning to not rely on outputs mutation
This is in preparation to:

a) De-duplicate fields() and outputs()
b) Get rid of the QueriedTable